--- a/index.html
+++ b/index.html
@@ -1,7 +1,59 @@
 <html>
-<?php
-$hostname = gethostbyaddr($_SERVER['REMOTE_ADDR']);
-  
-echo $hostname;
-?>
+<head>
+<title> Case 1098 </title>
+</head>
+
+<body>
+<h1>
+Redirected by discord, right?
+</h1>
+<h2>
+loading informations...
+</h2>
+
+<h2>
+done!
+</h2>
+
+<h2>
+detecting IP...
+</h2>
+
+<h2>
+Brazil, SP...
+</h2>
+
+
+<h2>
+loading languages...
+</h2>
+
+<h2>
+feito!
+</h2>
+
+
+<h2>
+Informações pessoais:
+</h2>
+
+
+<h3>
+Contas:
+</h3>
+
+<h4>Discord: </h4>
+<h4>Instagram: </h4>
+<h4>Facebook: </h4>
+<h4>G-mail: </h4>
+<h4>e outros...</h4>
+
+<h3>
+IP/CEP/endereço aproximado:
+</h3>
+
+<h4>Acho melhor eu não falar isso né? </h4>
+<h4>Contate nos no Discord, não precisa falar em todas contas, só 1 conta e as outras vão responder também.</h4>
+
+</body>
 </html>
