--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 <h1>
 Redirected by discord, right?
 </h1>
+<h3></h3>
 <h2>
-loading informations...
+Loading informations...
 </h2>
 
-<h2>
+<h3>
 done!
-</h2>
-
+</h3>
+<h3></h3>
 <h2>
 detecting IP...
 </h2>
@@ -22,22 +23,22 @@ detecting IP...
 <h2>
 Brazil, SP...
 </h2>
-
-
-<h2>
-loading languages...
-</h2>
+<h3></h3>
 
 <h2>
-feito!
+Loading languages...
 </h2>
-
-
+<h3>Connecting to local language...</h3>
+<h3>
+Feito!
+</h3>
+<h2></h2>
+<h2></h2>
 <h2>
 Informações pessoais:
 </h2>
 
-
+<h2></h2>
 <h3>
 Contas:
 </h3>
@@ -47,7 +48,7 @@ Contas:
 <h4>Facebook: </h4>
 <h4>G-mail: </h4>
 <h4>e outros...</h4>
-
+<h2></h2>
 <h3>
 IP/CEP/endereço aproximado:
 </h3>
