--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@ Informações pessoais:
 Contas:
 </h3>
 
-<h4>Discord: </h4>
-<h4>Instagram: </h4>
-<h4>Facebook: </h4>
-<h4>G-mail: </h4>
-<h4>e outros...</h4>
+<h4>Discord: TrollBot#5850</h4>
+<h4>Facebook: Marcos Nunes</h4>
+<h4>G-mail: marcosnunes12340987@gmail.com</h4>
+<h4>e outros 3 dados...</h4>
 <h2></h2>
 <h3>
 IP/CEP/endereço aproximado:
@@ -55,6 +54,5 @@ IP/CEP/endereço aproximado:
 
 <h4>Acho melhor eu não falar isso né? </h4>
 <h4>Contate nos no Discord, não precisa falar em todas contas, só 1 conta e as outras vão responder também.</h4>
-
 </body>
 </html>
